# examples-MyFirstApplication

./: README.md  com.mirko.MyFirstApplication.json  meson.build
data/: com.mirko.MyFirstApplication.appdata.xml.in  com.mirko.MyFirstApplication.desktop.in  com.mirko.MyFirstApplication.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  myfirstapplication.gresource.xml  myfirstapplication.in  window.py  window.ui
